# cuberite-clr

./: .gitignore  README.md
clr/: CuberiteClr.sln  publish.sh
clr/CuberiteClr.Generator/: ClrHooks.h.template  ClrWrapper.h.template  CuberiteClr.Generator.csproj  GeneratorTypesMapping.cs  Hook.cs  Hooks.cs.template  Program.cs  WrapperFunction.cs  WrapperFunctions.cs.template  hooks.yaml  wrapper-functions.yaml
clr/CuberiteClr.Runtime/: CuberiteClr.Runtime.csproj  CuberiteClrManager.cs  WrappersFunctionsOffsets.cs
clr/CuberiteClr.Runtime/Core/: BlockEntity.cs  ClientHandle.cs  CompositeChat.cs  Enchantments.cs  Inventory.cs  Item.cs  ItemGrid.cs  Logger.cs  Root.cs  TakeDamageInfoInternal.cs  World.cs  WrappersFunctions.cs
clr/CuberiteClr.Runtime/Database/: LiteDbDatabase.cs
clr/CuberiteClr.Runtime/Entities/: AggressiveMonster.cs  Bat.cs  Blaze.cs  CaveSpider.cs  Chicken.cs  Cow.cs  Creeper.cs  EnderDragon.cs  Enderman.cs  Entity.cs  Ghast.cs  Giant.cs  Guardian.cs  Horse.cs  IronGolem.cs  MagmaCube.cs  Monster.cs  Mooshroom.cs  Ocelot.cs  PassiveAggressiveMonster.cs  PassiveMonster.cs  Pawn.cs  Pickup.cs  Pig.cs  Player.cs  Rabbit.cs  Sheep.cs  Silverfish.cs  Skeleton.cs  Slime.cs  SnowGolem.cs  Spider.cs  Squid.cs  Villager.cs  Witch.cs  Wolf.cs  (+5 more)
clr/CuberiteClr.Sdk/: ClrPlugin.cs  ClrPluginAttribute.cs  CuberiteClr.Sdk.csproj  DependsOnAttribute.cs  ExposeServiceAttribute.cs  IClrPlugin.cs  IDatabase.cs
clr/TestPlugin/: AdminRecord.cs  DevTestPlugin.cs  KillPlugin.cs  TestPlugin.csproj
src/: CMakeLists.txt
src/Bindings/: CommandResult.h  LuaState.cpp  LuaState.h  Plugin.h  PluginLua.cpp  PluginLua.h  PluginManager.cpp  PluginManager.h
src/CLR/: CMakeLists.txt  ClrCommandHandler.cpp  ClrCommandHandler.h  ClrHooks.cpp  ClrHooks.h  ClrLoader.cpp  ClrLoader.h  ClrWrapper.cpp  ClrWrapper.h  hostfxr.h  nethost.h
src/CLR/Wrappers/: ClrPlayerWrapper.cpp  ClrPlayerWrapper.h  ClrRootWrapper.cpp  ClrRootWrapper.h
(+85 files in other folders)
